Prevent crash

BUG: 322472